[gd_scene load_steps=5 format=3 uid="uid://k56n7i0p2gg1"]

[ext_resource type="Texture2D" uid="uid://cjr5g4kd1cfhg" path="res://assets/ui/UIbg.png" id="1_c7rk1"]
[ext_resource type="Script" uid="uid://byvddwm75aq7c" path="res://Scenes/GameOverUI/GameOverUi.gd" id="1_x8bkw"]
[ext_resource type="LabelSettings" uid="uid://c2e7h4tydllcj" path="res://Resources/Text/label_white_69.tres" id="2_eeca3"]
[ext_resource type="LabelSettings" uid="uid://ciamtpa0ksi1l" path="res://Resources/Text/label_white_25.tres" id="3_rh7ns"]

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_x8bkw")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -300.0
offset_right = 256.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_c7rk1")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "YOU WIN!"
label_settings = ExtResource("2_eeca3")

[node name="MovesHBox" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="MovesLabel" type="Label" parent="NinePatchRect/VBoxContainer/MovesHBox"]
layout_mode = 2
size_flags_horizontal = 2
text = "Moves"
label_settings = ExtResource("3_rh7ns")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovesActual" type="Label" parent="NinePatchRect/VBoxContainer/MovesHBox"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
label_settings = ExtResource("3_rh7ns")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Time"
label_settings = ExtResource("3_rh7ns")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeActual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
label_settings = ExtResource("3_rh7ns")
horizontal_alignment = 1
vertical_alignment = 1
